rft rule